// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/permission_schemes_settings/permission_row > should match snapshot on editable and inherited 1`] = `
<body>
  <div>
    <div
      class="permission-row"
      id="uniqId"
    >
      <div
        class="permission-check checked"
        data-testid="uniqId-checkbox"
      >
        <svg
          height="18px"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill-rule="evenodd"
            id="Developer-Export"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="All-Team-Members"
              transform="translate(-285.000000, -933.000000)"
            >
              <g
                transform="translate(245.000000, 698.000000)"
              >
                <g
                  id="Channel-Administrators"
                  transform="translate(0.000000, 106.000000)"
                >
                  <g
                    id="data-table/column-1"
                    transform="translate(11.000000, 86.000000)"
                  >
                    <g
                      id="row-checkbox---Public-Channels"
                      transform="translate(12.000000, 35.000000)"
                    >
                      <g
                        id="Stacked-Group"
                        transform="translate(0.000000, 5.000000)"
                      >
                        <g
                          id="data-table/1st/row-checkbox-label-base"
                        >
                          <g
                            id="check-on-copy-11"
                            transform="translate(14.000000, 0.000000)"
                          >
                            <path
                              d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                              id="checkbox---checked"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <span
        class="permission-name"
      >
        id
      </span>
      <div
        class="permission-description"
        data-testid="description-id"
      />
    </div>
  </div>
</body>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row > should match snapshot on editable and not inherited 1`] = `
<body>
  <div>
    <div
      class="permission-row"
      id="uniqId"
    >
      <div
        class="permission-check checked"
        data-testid="uniqId-checkbox"
      >
        <svg
          height="18px"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill-rule="evenodd"
            id="Developer-Export"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="All-Team-Members"
              transform="translate(-285.000000, -933.000000)"
            >
              <g
                transform="translate(245.000000, 698.000000)"
              >
                <g
                  id="Channel-Administrators"
                  transform="translate(0.000000, 106.000000)"
                >
                  <g
                    id="data-table/column-1"
                    transform="translate(11.000000, 86.000000)"
                  >
                    <g
                      id="row-checkbox---Public-Channels"
                      transform="translate(12.000000, 35.000000)"
                    >
                      <g
                        id="Stacked-Group"
                        transform="translate(0.000000, 5.000000)"
                      >
                        <g
                          id="data-table/1st/row-checkbox-label-base"
                        >
                          <g
                            id="check-on-copy-11"
                            transform="translate(14.000000, 0.000000)"
                          >
                            <path
                              d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                              id="checkbox---checked"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <span
        class="permission-name"
      >
        id
      </span>
      <div
        class="permission-description"
        data-testid="description-id"
      />
    </div>
  </div>
</body>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row > should match snapshot on read only and not inherited 1`] = `
<body>
  <div>
    <div
      class="permission-row read-only"
      id="uniqId"
    >
      <div
        class="permission-check checked"
        data-testid="uniqId-checkbox"
      >
        <svg
          height="18px"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill-rule="evenodd"
            id="Developer-Export"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="All-Team-Members"
              transform="translate(-285.000000, -933.000000)"
            >
              <g
                transform="translate(245.000000, 698.000000)"
              >
                <g
                  id="Channel-Administrators"
                  transform="translate(0.000000, 106.000000)"
                >
                  <g
                    id="data-table/column-1"
                    transform="translate(11.000000, 86.000000)"
                  >
                    <g
                      id="row-checkbox---Public-Channels"
                      transform="translate(12.000000, 35.000000)"
                    >
                      <g
                        id="Stacked-Group"
                        transform="translate(0.000000, 5.000000)"
                      >
                        <g
                          id="data-table/1st/row-checkbox-label-base"
                        >
                          <g
                            id="check-on-copy-11"
                            transform="translate(14.000000, 0.000000)"
                          >
                            <path
                              d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                              id="checkbox---checked"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <span
        class="permission-name"
      >
        id
      </span>
      <div
        class="permission-description"
        data-testid="description-id"
      />
    </div>
  </div>
</body>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row > should match snapshot on read only and not inherited 2`] = `
<body>
  <div>
    <div
      class="permission-row read-only"
      id="uniqId"
    >
      <div
        class="permission-check checked"
        data-testid="uniqId-checkbox"
      >
        <svg
          height="18px"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill-rule="evenodd"
            id="Developer-Export"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="All-Team-Members"
              transform="translate(-285.000000, -933.000000)"
            >
              <g
                transform="translate(245.000000, 698.000000)"
              >
                <g
                  id="Channel-Administrators"
                  transform="translate(0.000000, 106.000000)"
                >
                  <g
                    id="data-table/column-1"
                    transform="translate(11.000000, 86.000000)"
                  >
                    <g
                      id="row-checkbox---Public-Channels"
                      transform="translate(12.000000, 35.000000)"
                    >
                      <g
                        id="Stacked-Group"
                        transform="translate(0.000000, 5.000000)"
                      >
                        <g
                          id="data-table/1st/row-checkbox-label-base"
                        >
                          <g
                            id="check-on-copy-11"
                            transform="translate(14.000000, 0.000000)"
                          >
                            <path
                              d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                              id="checkbox---checked"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <span
        class="permission-name"
      >
        id
      </span>
      <div
        class="permission-description"
        data-testid="description-id"
      />
    </div>
  </div>
</body>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row > should match snapshot with additional values 1`] = `
<body>
  <div>
    <div
      class="permission-row"
      id="uniqId"
    >
      <div
        class="permission-check checked"
        data-testid="uniqId-checkbox"
      >
        <svg
          height="18px"
          viewBox="0 0 18 18"
          width="18px"
        >
          <g
            fill-rule="evenodd"
            id="Developer-Export"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="All-Team-Members"
              transform="translate(-285.000000, -933.000000)"
            >
              <g
                transform="translate(245.000000, 698.000000)"
              >
                <g
                  id="Channel-Administrators"
                  transform="translate(0.000000, 106.000000)"
                >
                  <g
                    id="data-table/column-1"
                    transform="translate(11.000000, 86.000000)"
                  >
                    <g
                      id="row-checkbox---Public-Channels"
                      transform="translate(12.000000, 35.000000)"
                    >
                      <g
                        id="Stacked-Group"
                        transform="translate(0.000000, 5.000000)"
                      >
                        <g
                          id="data-table/1st/row-checkbox-label-base"
                        >
                          <g
                            id="check-on-copy-11"
                            transform="translate(14.000000, 0.000000)"
                          >
                            <path
                              d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                              id="checkbox---checked"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <span
        class="permission-name"
      >
        id
      </span>
      <div
        class="permission-description"
        data-testid="description-id"
      />
    </div>
  </div>
</body>
`;
